--- a/styles/index.css
+++ b/styles/index.css
@@ -1,3 +1,7 @@
+body{
+  font-family: 'Abel';
+}
+
 .bookmark-div{
   border: solid darkblue 1px;
   border-radius: 2%;
@@ -19,6 +23,7 @@
 
 .delete-button, .edit-button {
   float: right;
+  margin: 0 2px;
 }
 
 .bookmark-expanded, .bookmark-collapsed, .bookmark-editing{
@@ -29,4 +34,8 @@
   margin-top: 0;
   padding: 5px;
   text-align: left;
+}
+
+#choose-rating{
+  float: right;
 }
