--- a/styles/index.css
+++ b/styles/index.css
@@ -1,5 +1,6 @@
 body{
   font-family: 'Abel';
+  background-image: linear-gradient(to right, white, gray);
 }
 
 .bookmark-div{
@@ -11,14 +12,19 @@ body{
 }
 
 .bookmark-title{
-  background-color:rgba(16, 16, 137, 0.57);
+  background-color:rgba(3, 0, 0, 1);
   text-align: left;
   padding: 0 10px;
+  color: white;
 }
 
 .error-message{
   text-align: center;
   color: red;
+}
+
+.error-text{
+  border: 1px solid red;
 }
 
 .delete-button, .edit-button {
@@ -27,7 +33,7 @@ body{
 }
 
 .bookmark-expanded, .bookmark-collapsed, .bookmark-editing{
-  background-color: rgba(16, 16, 137, 0.13);
+  background-color: rgba(0,0,0, 0.13);
 }
 
 .description{
@@ -36,7 +42,7 @@ body{
   text-align: left;
 }
 
-#choose-rating{
+#adding-bookmark{
   float: right;
 }
 
@@ -46,4 +52,16 @@ input{
 
 .cancel-new-bookmark, .submit-form{
   margin-top: 10px;
+}
+
+button, select{
+  background-color: black;
+  color: white;
+}
+
+#add-new-bookmark-form{
+  border: 1px black solid;
+  border-radius: 1%;
+  padding: 5px;
+  text-align: center;
 }
